--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,12 @@
 [versions]
-kotlin = "1.9.20"
+kotlin = "1.9.21"
 test-junit = "5.10.1"
 test-assertk = "0.27.0"
 
 [libraries]
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
-test-junit = { module = "org.junit.jupiter:junit-jupiter", version.ref = "test-junit" }
-test-assertk = { module = "com.willowtreeapps.assertk:assertk", version.ref = "test-assertk" }
+junit = { module = "org.junit.jupiter:junit-jupiter", version.ref = "test-junit" }
+assertk = { module = "com.willowtreeapps.assertk:assertk", version.ref = "test-assertk" }
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
