--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,20 @@
 [versions]
 kotlin = "1.9.21"
+kotlinx-multik = "0.2.2"
 test-junit = "5.10.1"
 test-assertk = "0.27.0"
+test-mockito = "5.2.1"
 
 [libraries]
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
+kotlinx-multik-core = { module = "org.jetbrains.kotlinx:multik-core", version.ref = "kotlinx-multik" }
+kotlinx-multik-default = { module = "org.jetbrains.kotlinx:multik-default", version.ref = "kotlinx-multik" }
 junit = { module = "org.junit.jupiter:junit-jupiter", version.ref = "test-junit" }
 assertk = { module = "com.willowtreeapps.assertk:assertk", version.ref = "test-assertk" }
+mockito = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "test-mockito" }
+
+[bundles]
+kotlinx-multik = ["kotlinx-multik-core", "kotlinx-multik-default"]
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
